/* Node.proto: describes the base Node object
 *
 * Author: J. Lowell Wofford <lowell@lanl.gov>
 *
 * This software is open source software available under the BSD-3 license.
 * Copyright (c) 2018, Triad National Security, LLC
 * See LICENSE file for details.
 */

syntax = "proto3";
package proto;

import "google/protobuf/any.proto";
import "ServiceInstance.proto";

message NodeList {
    repeated Node nodes = 1;
}

message Node {
    bytes id = 1;
    string nodename = 2; /* may or may not be the hostname */
    enum RunState {
        UNKNOWN     = 0;
        INIT        = 1;
        SYNC        = 2;
        ERROR       = 3;
    }
    RunState run_state = 3;
    enum PhysState {
        PHYS_UNKNOWN    = 0;
        POWER_OFF       = 1;
        POWER_ON        = 2;
        POWER_CYCLE     = 3; // probably won't be used
        PHYS_HANG       = 4; // possibly recoverable (by reboot) physical hange
        PHYS_ERROR      = 5; // in a permanent, unrecoverable state
    }
    PhysState phys_state = 4;
    string arch = 5;
    string platform = 6;
    bytes parent_id = 7;
    reserved 8 to 13;
    repeated ServiceInstance services = 14;
    repeated google.protobuf.Any extensions = 15;
}